[gd_scene load_steps=23 format=2]

[ext_resource path="res://enemies/bosses/spider/SpiderBoss.gd" type="Script" id=1]
[ext_resource path="res://enemies/bosses/spider/spider_boss.png" type="Texture" id=2]
[ext_resource path="res://hitbox_hurtbox/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://hitbox_hurtbox/hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://hitbox_hurtbox/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://enemies/shadow.png" type="Texture" id=9]
[ext_resource path="res://engine/WhiteColorShader.shader" type="Shader" id=10]
[ext_resource path="res://BlinkAnimationPlayer.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.255, 12.8108 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.6433, 12.6069 )

[sub_resource type="CircleShape2D" id=3]
radius = 95.7578

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.6964, 8.21315 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.6237, 11.5874 )

[sub_resource type="Animation" id=10]
resource_name = "blink"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
resource_name = "blinkStop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=7]
resource_name = "spawn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawnSpider"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 2, 1, 0 ]
}

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 10 )
shader_param/active = false

[node name="Spider" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 5 )
scale = Vector2( 3, 1 )
texture = ExtResource( 9 )
offset = Vector2( 0, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 16

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="hitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 4

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 4 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 5 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]
wander_range = 64

[node name="BlinkAnimationPlayer" parent="." instance=ExtResource( 11 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 10 )
anims/blinkStop = SubResource( 11 )
anims/idle = SubResource( 6 )
anims/spawn = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 9 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 5
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="hitbox"]

[editable path="SoftCollision"]

[editable path="BlinkAnimationPlayer"]
